handle state changes, re-render things

--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
     </header>
 
     <div class="left-sidebar">
-      <h3>Topics</h3>
-      <h3>Connections</h3>
+      <h3>Clients</h3>
+      <ul class="clients"></ul>
+      <h3>Subscriptions</h3>
+      <ul class="subscriptions"></ul>
       <h3>Protobufs</h3>
-      <h3>Message Log</h3>
     </div>
 
-    <main></main>
+    <main>
+      <h3>Message Log</h3>
+      <div class="messages"></div>
+    </main>
 
     <footer>
       <p>Written in the open, with ❤️, by people who care.</p>
