break styles into files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>ProtoMQ</h1>
     </header>
 
-    <div class="left-sidebar">
+    <div class="sidebar">
       <h3>Clients</h3>
       <ul class="clients"></ul>
       <h3>Subscriptions</h3>
