display all the protobufs

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <h3>Subscriptions</h3>
       <ul class="subscriptions"></ul>
       <h3>Protobufs</h3>
+      <ul class="protobufs"></ul>
     </div>
 
     <main>
