move app to frontend

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="//unpkg.com/mqtt/dist/mqtt.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/protobufjs@7.2.6/dist/protobuf.min.js"></script>
 
-    <!-- app -->
-    <script src="app/index.js" type="module"></script>
+    <!-- front-end application -->
+    <script src="frontend/index.js" type="module"></script>
   </head>
 
   <body>
